--- a/static/index.html
+++ b/static/index.html
@@ -56,7 +56,8 @@ function drawCircle(context,entity) {
         fillStyle = entity["colour"];
         strokeStyle = fillStyle;
         arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);  
-        stroke();                                
+        stroke();         
+        fill();                       
     }
 }
 
@@ -235,11 +236,11 @@ mouse = (function() {
 // Add the application specific mouse listeners!
 //XXX: TODO Make these prettier!
 mouse.mousedowners.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'white', 'radius':45});
+    addEntityWithoutName({'x':x,'y':y,'colour':'white', 'radius':35});
 });
 
 mouse.mouseuppers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'purple', 'radius':60});
+    addEntityWithoutName({'x':x,'y':y,'colour':'purple', 'radius':50});
 });
 
 mouse.mousedraggers.push(function(x,y,clicked,e) {
@@ -257,8 +258,14 @@ function wsSetup() {
     socket = new WebSocket(url);
     socket.onopen = function() {
         //XXX: TODO What are you going to do here?
-        // socket.send(JSON.stringify(world));
         console.log("connected");
+        fetch('/world')
+        .then(response => response.json())
+        .then(data => {
+            world = data;
+            drawNextFrame();
+        })
+        .catch(err => console.log(err));
     };
     socket.onerror = function(msg) {
         debug("WebSocket Error:" + msg.data);
